--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "braces": ">=2.3.1",
+    "clean-css": ">=4.1.11",
+    "growl": ">=1.10.0"
   },
   "devDependencies": {
     "babel-brunch": "6.0.6",
-    "brunch": "2.10.7",
+    "brunch": "^2.10.17",
     "clean-css-brunch": "2.10.0",
     "uglify-js-brunch": "2.1.1"
   }
